Finish the intro, and add a todolist for the future

--- a/paper/conclusion.tex
+++ b/paper/conclusion.tex
@@ -1,2 +1,4 @@
 \section*{Conclusion}
+\label{sec:conclusion}
+
 \NM{} is a drop-in memory allocator replacement that is specially designed for the NUMA architecture. It could automatically adapt to different hardware with different number of cores. It employs multiple mechanisms to improve its performance. 
