--- a/paper/main.tex
+++ b/paper/main.tex
@@ -63,7 +63,7 @@
 
 \begin{document}
 
-\title{NUMALLOC: Adaptive NUMA Memory Allocator}
+\title{NUMAlloc: Adaptive NUMA Memory Allocator}
 \author{Anonymous}
 
 \input{abstract}
