--- a/paper/relatedwork.tex
+++ b/paper/relatedwork.tex
@@ -1,6 +1,24 @@
 \section{Related Work}
 
+\label{sec:related}
+
+This section discusses some related work with \NM{}. 
+
 \paragraph{General Purpose Allocators:}
+Memory allocators manages virtual memory inside the user space. There exists a large number of allocators~\cite{dlmalloc, Hoard, TCMalloc, jemalloc, Scalloc}, but they are not designed for NUMA achitecture.  These allocators share some similar design. First, they typically manage objects in multiple size classes, instead of using the exact size. Second, they typically utilize different mechanisms to manage small objects and large objects. For instance, small objects may utilize freelists to track freed objects upon deallocations, but large objects may be returned to the OS directly.  
+
+Based on the management of small objects, allocators can be further classified into multiple types, such as sequential, BiBOP, and region-based allocators~\cite{DieHarder, Gay:1998:MME:277650.277748}. Region-based allocators are suitable for special situations where all allocated objects within the same region can be deallocated at once~\cite{Gay:1998:MME:277650.277748}. 
+
+For sequential allocators, subsequent memory allocations are satisfied in the continuous memory area, such as the Linux allocator (originating from dlmalloc~\cite{dlmalloc}) and Windows allocator~\cite{DieHarder}. After an allocation, the pointer is bumped to the end of the current object to satisfy the subsequent allocations, which is also called as \texttt{bump allocators}. For such allocators, objects with different sizes can be placed continuously. Upon deallocations, freed objects are typically placed into different free lists based on their size classes. In order to get the size information, these allocators typically place the size information just before actual objects. 
+
+BiBOP stands for ''Big Bag of Pages''~\cite{hanson1980}. For BiBOP-style allocators, one or multiple continuous pages are treated as a ``bag'', holding objects with the same size class. The metadata of heap objects, such as its size and availability information, is typically stored in a separate area. Thus, BIBOP-style allocators improve the security and reliability, by avoiding metadata corruption caused by buffer overflows. Many performance-oriented allocators, such as TCMalloc~\cite{TCMalloc}, \texttt{jemalloc}~\cite{jemalloc}, Hord~\cite{Hoard}, Scalloc~\cite{Scalloc}, and most secure allocators, such as OpenBSD~\cite{OpenBSD} and DieHarder~\cite{DieHarder}, belong to this type. BiBOP allocators may utilize free lists or bitmaps to manage the availability of objects. 
+
+
+%~\cite{jemalloc} introduces a round-robin fashion for arena allocation, and all locks and buffers will be local to the associated arena. Similarly, \NM{} also takes the similar approach. 
+
+Scalloc utilizes the same-sized spans in order to encourage memory reuses~\cite{Scalloc}, which is also the same for \NM{}. Salloc has another two contributions, a global backend developed by concurrent data structures, and a constant-time front end that returns the spans to the backend. 
+
+Bolosky et. al. propose a simple mechanism to improve the performance by replicating read-only pages to multiple processors, moving pages to the processor that written them, and placing pages to the global memory if they are written by multiple processes ~\cite{Bolosky:1989:SBE:74850.74854}.
 
 \paragraph{NUMA-aware Allocators:} 
 
@@ -53,9 +71,5 @@ configuration, OSs (such as Linux) tend to change the thread-to-core mapping dur
 
 ~\cite{Bui:2019:EPV:3302424.3303960} talks about the virtualization of NUMA.
 
-~\cite{jemalloc} introduces a round-robin fashion for arena allocation, and all locks and buffers will be local to the associated arena. Similarly, \NM{} also takes the similar approach. 
-
-Scalloc utilizes the same-sized spans in order to encourage memory reuses~\cite{Scalloc}, which is also the same for \NM{}. Salloc has another two contributions, a global backend developed by concurrent data structures, and a constant-time front end that returns the spans to the backend. 
-
-Bolosky et. al. propose a simple mechanism to improve the performance by replicating read-only pages to multiple processors, moving pages to the processor that written them, and placing pages to the global memory if they are written by multiple processes ~\cite{Bolosky:1989:SBE:74850.74854}. bl
+ bl
 
